A shop can now make orders to providers (warehouses that the shop has contract with 'approved' status). The orders are managed automatically + A shop can request contracts with all of the available warehouses (warehouses approved by admin)